--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["./src/*", "./dist/*", ""],
-            "components/*": ["./src/components/*"]
+            "components/*": ["./src/components/*"],
+            "pages/*": ["./src/pages/*"]
         }
     },
     "include": ["src"],
