--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@picocss/pico": "^1.5.10",
+        "axios": "^1.4.0",
         "path": "^0.12.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
