--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 VITE_API_BASEURL=https://thecocktaildb.com/api/json/v1/1/
 VITE_API_ING_IMG_URL=https://thecocktaildb.com/images/ingredients/
-VITE_BASEURL=""
+VITE_BASEURL="/cocktailz"
