provide max width for CocktailItem component

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_API_BASEURL=https://thecocktaildb.com/api/json/v1/1/
 VITE_API_ING_IMG_URL=https://thecocktaildb.com/images/ingredients/
 VITE_BASEURL=""
+VITE_ROWQTY=5
